Use incremental script loading to avoid duplicates. We hit https://bugs.eclipse.org/bugs/show_bug.cgi?id=262207 when reloading scripts with the ".* files" resource filter enabled.
Review URL: http://codereview.chromium.org/149777

--- a/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -17,6 +17,7 @@ JsLineBreakpoint_MessageMarkerFormat=Line Breakpoint: {0} [line: {1}]
 JsThread_ThreadLabelFormat=JavaScript Thread ({0}){1}
 JsThread_ThreadLabelRunning=Running
 JsThread_ThreadLabelSuspended=Suspended
+ResourceManager_UnnamedScriptName=(program)
 StackFrame_NameFormat={0} [{1}:{2}]
 StackFrame_UnknownScriptName=<unknown>
 Variable_NotScalarOrObjectFormat=Not scalar or object: {0}
