--- a/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -6,6 +6,8 @@ ChromiumTabSelectionDialog_DialogTitle=Select Tab to Debug
 ChromiumTabSelectionDialog_IdColumnName=ID
 ChromiumTabSelectionDialog_TableTitle=Available Tabs
 ChromiumTabSelectionDialog_UrlColumnName=Tab URL
+ConnectionLoggerImpl_ReceivedFromChrome=Received from Chrome:
+ConnectionLoggerImpl_SentToChrome=Sent to Chrome:
 DebugTargetImpl_BadResultWhileDisconnecting=Received bad result from browser while disconnecting
 DebugTargetImpl_CannotStartMultipleDebuggers=Cannot start more than one instance of debugger
 DebugTargetImpl_Caught=Caught
