--- a/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -15,6 +15,7 @@ DebugTargetImpl_FailedToStartSocketConnection=Failed to start socket transport
 DebugTargetImpl_LogExceptionFormat={0} {1} (in {2}:{3}): {4}
 DebugTargetImpl_TargetName=Chromium
 DebugTargetImpl_Uncaught=Uncaught
+JavascriptVmEmbedderFactory_TargetName0=Remote "{0}" embedding V8 {1}
 JsLineBreakpoint_MessageMarkerFormat=Line Breakpoint: {0} [line: {1}]
 JsThread_ThreadLabelFormat=JavaScript Thread ({0}){1}
 JsThread_ThreadLabelRunning=Running
