Add new launch type and remove host
Review URL: http://codereview.chromium.org/165392

--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
@@ -1,7 +1,7 @@
 ChromiumRemoteTab_ShowDebuggerNetworkCommunication=Show debugger network communication console
 ChromiumRemoteTab_PortLabel=Port:
-ChromiumRemoteTab_ProjectNameLabel=Remote Scripts Project Name:
+ChromiumRemoteTab_ProjectNameLabel=Virtual project name:
 ChromiumRemoteTab_RemoteTabName=Remote
 ChromiumRemoteTab_InvalidPortNumberError=Invalid port number
 ChromiumRemoteTab_InvalidProjectNameError=Invalid remote script project name
-LaunchType_DebuggerChromeConnection=Debugger-Chrome connection
+LaunchType_DebuggerChromeConnection=Debugger-Chromium connection
