Fix target name in UI and fix exception
Review URL: http://codereview.chromium.org/181017

--- a/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -16,6 +16,8 @@ DebugTargetImpl_LogExceptionFormat={0} {1} (in {2}:{3}): {4}
 DebugTargetImpl_TargetName=Chromium
 DebugTargetImpl_Uncaught=Uncaught
 JavascriptVmEmbedderFactory_TargetName0=Remote "{0}" embedding V8 {1}
+JavascriptVmEmbedderFactory_Terminated=terminated
+JavascriptVmEmbedderFactory_TerminatedWithReason=terminated: {0}
 JsLineBreakpoint_MessageMarkerFormat=Line Breakpoint: {0} [line: {1}]
 JsThread_ThreadLabelFormat=JavaScript Thread ({0}){1}
 JsThread_ThreadLabelRunning=Running
