--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
@@ -4,4 +4,5 @@ ChromiumRemoteTab_ProjectNameLabel=Virtual project name:
 ChromiumRemoteTab_RemoteTabName=Remote
 ChromiumRemoteTab_InvalidPortNumberError=Invalid port number
 ChromiumRemoteTab_InvalidProjectNameError=Invalid remote script project name
-LaunchType_DebuggerChromeConnection=Debugger-Chromium connection
+# note that this string is a part of the hidden filename, so translate with care
+LaunchType_LogConsoleLaunchName=log
