--- a/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -6,6 +6,7 @@ ChromiumTabSelectionDialog_DialogTitle=Select Tab to Debug
 ChromiumTabSelectionDialog_IdColumnName=ID
 ChromiumTabSelectionDialog_TableTitle=Available Tabs
 ChromiumTabSelectionDialog_UrlColumnName=Tab URL
+ConnectionLoggerImpl_MessageSeparator=\n> end of message\n
 ConnectionLoggerImpl_ReceivedFromChrome=Received from Chrome:
 ConnectionLoggerImpl_SentToChrome=Sent to Chrome:
 DebugTargetImpl_BadResultWhileDisconnecting=Received bad result from browser while disconnecting
