--- a/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -16,6 +16,7 @@ DebugTargetImpl_FailedToStartSocketConnection=Failed to start socket transport
 DebugTargetImpl_LogExceptionFormat={0} {1} (in {2}:{3}): {4}
 DebugTargetImpl_TargetName=Chromium
 DebugTargetImpl_Uncaught=Uncaught
+DebugTargetImpl_Unknown=<unknown>
 JavascriptVmEmbedderFactory_TargetName0=Remote "{0}" embedding V8 {1}
 JavascriptVmEmbedderFactory_Terminated=terminated
 JavascriptVmEmbedderFactory_TerminatedWithReason=terminated: {0}
@@ -23,6 +24,7 @@ JsLineBreakpoint_MessageMarkerFormat=Line Breakpoint: {0} [line: {1}]
 JsThread_ThreadLabelFormat=JavaScript Thread ({0}){1}
 JsThread_ThreadLabelRunning=Running
 JsThread_ThreadLabelSuspended=Suspended
+JsThread_ThreadLabelSuspendedExceptionFormat=Suspended (exception "{0}")
 ResourceManager_UnnamedScriptName=(program)
 StackFrame_NameFormat={0} [{1}:{2}]
 StackFrame_UnknownScriptName=<unknown>
