Support secondary source containers
Review URL: http://codereview.chromium.org/1612002

--- a/plugins/org.chromium.debug.core/src/org/chromium/debug/core/messages.properties
+++ b/plugins/org.chromium.debug.core/src/org/chromium/debug/core/messages.properties
@@ -3,3 +3,4 @@
 # found in the LICENSE file.
 
 ChromiumDebugPlugin_InternalError=Internal Error
+VProjectSourceContainer_DEFAULT_TYPE_NAME=Remote V8/Chrome Scripts
