Edited the Contribution wiki page through web user interface.

--- a/wiki/Contribution.wiki
+++ b/wiki/Contribution.wiki
@@ -1,33 +1,36 @@
 #summary How to contribute to the project.
 
-= Contribution to the project =
+= Contributing to the project =
+
+We welcome any kind of contribution to our project. This could be a simple bug report, a thought-out new feature design, or even a code patch.
 
 == How to send a patch ==
 
-We use the same code review site that Chromium project does: http://codereview.chromium.org/
+We use the same code review site as the Chromium project: http://codereview.chromium.org/
 
-You can upload your patch either
-  * via the [http://codereview.chromium.org/new web interface],
-  * with upload.py Python script if your working files are SVN repository or
-  * with git-cl utility if your working files are GIT-SVN repository.
+You have several options on how to upload your patch for review:
+  * the [http://codereview.chromium.org/new web interface] (this seems the least convenient option, as you have to prepare a patch manually)
+  * the upload.py Python script (if your working files reside in an SVN checkout)
+  * the [http://neugierig.org/software/git/?r=git-cl git-cl] utility (if your working files reside in a GIT-SVN repository). The Chromium [http://code.google.com/p/chromium/wiki/UsingGit#Code_Reviews Git Code Reviews] section gives you a hint or two on how to use git-cl for code reviews.
 
-=== Sending a Patch with {{{upload.py}}} Script ===
-0. It assumes that you have your _chromedevtools_ project checked out  with command-line SVN (Eclipse SVN plugin may not work here).
+=== Using {{{upload.py}}} for your patch work ===
+The script assumes that you have your _chromedevtools_ SVN checkout made with the command-line svn (the Eclipse SVN plugin may not work here). See the [http://code.google.com/p/chromedevtools/source/checkout Source Checkout] hint for this project.
 
-1. Make sure you have an account at http://codereview.chromium.org/
+1. Make sure you have an account at http://codereview.chromium.org/.
 
-2. Download {{{upload.py}}} script from the web [http://codereview.chromium.org/new Create Issue] page.
+2. Download the {{{upload.py}}} script [http://codereview.chromium.org/static/upload.py here].
 
-3. Prepare all your changes as if you are going to run {{{svn commit}}} (e.g. do all {{{svn add}}} work).
+3. Prepare all your changes as if you were going to run {{{svn commit}}} (e.g. do all the {{{svn add}}} work).
 
-4. Run {{{upload.py}}} script:
+4. Run the {{{upload.py}}} script (make sure it is in your PATH):
 {{{
-./upload.py -s codereview.chromium.org
+upload.py -s codereview.chromium.org
 }}}
-It will ask the name of your patch, your email and password (latter two get cached).
-You should get a URL of your created _issue_ (this _issue_ is not the same to what is called "issues" on code.google.com). E.g. http://codereview.chromium.org/1707006
+The script will ask you for the name of the patch, your codereview.chromium.org email and password (the latter two get cached). If the command succeeds, you will get a URL of your newly created issue (like http://codereview.chromium.org/1707006).
 
-5. To update your patch (rather than creating new), run
+*NB!* This _issue_ (== patch under review) is not the same as what is called _Issues_ (== problem reports) on code.google.com.
+
+5. To update your patch (rather than create a new one), run
 {{{
 ./upload.py -s codereview.chromium.org -i <issue_number>
 }}}
