--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/messages.properties
@@ -5,3 +5,4 @@ ExpressionEvaluator_EvaluationThreadInterrupted=Evaluation thread interrupted
 ExpressionEvaluator_SocketError=Socket error while evaluating expression
 ExpressionEvaluator_UnableToEvaluateExpression=Unable to evaluate expression
 JsBreakpointPropertiesRulerAction_ItemLabel=Breakpoint Properties...
+SynchronizeBreakpoints_JOB_TITLE=Synchronize breakpoints in {0} target(s)
