Show full HTML mock-up instead of isolated scripts.
Review URL: http://codereview.chromium.org/2166001

--- a/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -25,6 +25,9 @@ JsThread_ThreadLabelFormat=JavaScript Thread ({0}){1}
 JsThread_ThreadLabelRunning=Running
 JsThread_ThreadLabelSuspended=Suspended
 JsThread_ThreadLabelSuspendedExceptionFormat=Suspended (exception "{0}")
+MockUpResourceWriter_NOT_A_JAVASCRIPT={not a JavaScript}
+MockUpResourceWriter_SCRIPT_WITHOUT_TEXT={ JavaScript script without text }
+MockUpResourceWriter_SCRIPTS_OVERLAPPED={ scripts overlapped. the following script must be {0} line(s) upper (at line {1}) }
 ResourceManager_UnnamedScriptName=(program)
 StackFrame_NameFormat={0} [{1}:{2}]
 StackFrame_UnknownScriptName=<unknown>
