--- a/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/messages.properties
+++ b/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/messages.properties
@@ -3,4 +3,5 @@
 # found in the LICENSE file.
 
 ChromiumDebugPlugin_InternalError=Internal Error
+SourceNameMapperContainer_NAME=Source mapper with prefix {0}
 VProjectSourceContainer_DEFAULT_TYPE_NAME=Remote V8/Chrome Scripts
