Add start-up breakpoint synchronization to launch config ui
Review URL: http://codereview.chromium.org/2791002

--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
@@ -1,3 +1,5 @@
+ChromiumRemoteTab_BREAKPOINT_GROUP=Breakpoint sync on launch
+ChromiumRemoteTab_CONNECTION_GROUP=Connection
 ChromiumRemoteTab_ShowDebuggerNetworkCommunication=Show debugger network communication console
 ChromiumRemoteTab_PortLabel=Port:
 ChromiumRemoteTab_RemoteTabName=Remote
