Add breakpoint synchronization to every launch and add progress bar
Review URL: http://codereview.chromium.org/2749008

--- a/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -25,6 +25,11 @@ JsThread_ThreadLabelFormat=JavaScript Thread ({0}){1}
 JsThread_ThreadLabelRunning=Running
 JsThread_ThreadLabelSuspended=Suspended
 JsThread_ThreadLabelSuspendedExceptionFormat=Suspended (exception "{0}")
+LaunchInitializationProcedure_JOB_NAME=Debug session initialization: {0}
+LaunchInitializationProcedure_LOAD_SCRIPTS=Load scripts from VM
+LaunchInitializationProcedure_SET_OPTIONS=Set options
+LaunchInitializationProcedure_SYNCHRONIZE_BREAKPOINTS=Synchronize breakpoints
+LaunchInitializationProcedure_UPDATE_DEBUGGER_STATE=Update debugger state
 LaunchParams_MERGE_OPTION=Merge local and remote breakpoints
 LaunchParams_NONE_OPTION=None
 LaunchParams_RESET_REMOTE_OPTION=Reset breakpoints on remote
