--- a/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -35,7 +35,7 @@ LaunchParams_NONE_OPTION=None
 LaunchParams_RESET_REMOTE_OPTION=Reset breakpoints on remote
 MockUpResourceWriter_NOT_A_JAVASCRIPT={not a JavaScript}
 MockUpResourceWriter_SCRIPT_WITHOUT_TEXT={ JavaScript script without text }
-MockUpResourceWriter_SCRIPTS_OVERLAPPED=\{ scripts overlapped. the following script must be {0} line(s) upper (at line {1}) \}
+MockUpResourceWriter_SCRIPTS_OVERLAPPED='{' scripts overlapped. the following script must be {0} line(s) above (at line {1}) '}'
 ResourceManager_UnnamedScriptName=(program)
 StackFrame_NameFormat={0} [{1}:{2}]
 StackFrame_UnknownScriptName=<unknown>
