--- a/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -10,10 +10,12 @@ ConnectionLoggerImpl_MessageSeparator=\n> end of message\n
 ConnectionLoggerImpl_ReceivedFromChrome=Received from Chrome:
 ConnectionLoggerImpl_SentToChrome=Sent to Chrome:
 DebugTargetImpl_BadResultWhileDisconnecting=Received bad result from browser while disconnecting
+DebugTargetImpl_BUSY_WITH=Busy with ''{0}'' request (+{1} in queue)
 DebugTargetImpl_CannotStartMultipleDebuggers=Cannot start more than one instance of debugger
 DebugTargetImpl_Caught=Caught
 DebugTargetImpl_FailedToStartSocketConnection=Failed to start socket transport
 DebugTargetImpl_LogExceptionFormat={0} {1} (in {2}:{3}): {4}
+DebugTargetImpl_TARGET_NAME_PATTERN={0} / {1}
 DebugTargetImpl_TargetName=Chromium
 DebugTargetImpl_Uncaught=Uncaught
 DebugTargetImpl_Unknown=<unknown>
