Add UI for LiveEdit push action
Review URL: http://codereview.chromium.org/2815036

--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/messages.properties
@@ -1,3 +1,5 @@
+ChooseVmControl_LAUNCH=Launch
+ChooseVmControl_TARGET=Target
 ExpressionEvaluator_CannotEvaluateWhenNotSuspended=JavaScript thread not suspended. Cannot perform evaluation.
 ExpressionEvaluator_ErrorEvaluatingExpression=Error evaluating expression
 ExpressionEvaluator_ErrorInspectingObject=Error inspecting object
