--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/messages.properties
@@ -1,3 +1,5 @@
+ChooseVmControl_LAUNCH=Launch
+ChooseVmControl_TARGET=Target
 ExpressionEvaluator_CannotEvaluateWhenNotSuspended=JavaScript thread not suspended. Cannot perform evaluation.
 ExpressionEvaluator_ErrorEvaluatingExpression=Error evaluating expression
 ExpressionEvaluator_ErrorInspectingObject=Error inspecting object
