--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/liveedit/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/liveedit/messages.properties
@@ -4,7 +4,8 @@ LiveEditResultDialog_CURRENT_SCRIPT=Current script in VM
 LiveEditResultDialog_FAILURE=Failure: {0}
 LiveEditResultDialog_FRAMES_DROPPED=Top frame(s) has been dropped from stack.
 LiveEditResultDialog_OK=OK
-LiveEditResultDialog_OLD_SCRIPT=Old script in VM '{0}'
+LiveEditResultDialog_OLD_SCRIPT=Old script in VM ''{0}''
+LiveEditResultDialog_SCRIPT_CREATED=Script that represents old version of source has been created.
 LiveEditResultDialog_SEVERAL_VMS=Several VMs have been updated.
 LiveEditResultDialog_STATUS=Status
 LiveEditResultDialog_SUCCESS=Script has been successfully updated.
