Uncomment live edit actions and change labels
Review URL: http://codereview.chromium.org/2873065

--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/liveedit/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/liveedit/messages.properties
@@ -9,7 +9,7 @@ LiveEditResultDialog_SCRIPT_CREATED=Script that represents old version of source
 LiveEditResultDialog_SEVERAL_VMS=Several VMs have been updated.
 LiveEditResultDialog_STATUS=Status
 LiveEditResultDialog_SUCCESS=Script has been successfully updated.
-LiveEditResultDialog_TITLE=LiveEdit Script Update Result
+LiveEditResultDialog_TITLE=Live Edit Script Update Result
 PreviewLoader_FAILED_TO_GET=Failed to get preview from VM: {0}
 PreviewLoader_FAILED_TO_LOAD=Failed to load V8 preview data
 PushChangesWizard_CHANGED_SCRIPT=Changed script
@@ -23,8 +23,8 @@ PushChangesWizard_TEXT_CHANGED_SCRIPT=Changed script
 PushChangesWizard_TEXT_SCRIPT_IN_VM=Script in VM
 PushChangesWizard_TEXTUAL_DIFF=Textual difference
 PushChangesWizard_TEXTUAL_DIFF_DESCRIPTION=Script update is based on textual script diff (though this view may be not 100% accurate).
-PushChangesWizard_TITLE=Push LiveEdit Changes to VM
-PushChangesWizard_V8_PREVIEW=V8 LiveEdit Update Preview
+PushChangesWizard_TITLE=Push Live Edit Changes to VM
+PushChangesWizard_V8_PREVIEW=V8 Live Edit Update Preview
 PushChangesWizard_V8_PREVIEW_DESCRIPTION=Script update is performed function-wise as shown on the diagram.
 PushResultParser_FAILED_SEE_LOG=Failed to read source, see Error Log
 PushResultParser_LOCAL_FILE=Local file
