Edited wiki page through web user interface.

--- a/wiki/Release_0_1_6.wiki
+++ b/wiki/Release_0_1_6.wiki
@@ -12,19 +12,19 @@ When you connect to a remote !JavaScript VM, debugger automatically downloads al
 
 You can configure this starting from the current release. First let’s see how V8 identifies those remote scripts. While debugging a script in the virtual project open “Properties” (context menu on file in “Project Explorer” or with Alt+Enter in an editor).
 
-Picture
+http://chromedevtools.googlecode.com/svn/wiki/rel016-script-properties.png
 
 Here we see that VM identifies your script as URL {{{ http://server:8080/misc/utils.js }}} (from this URL you seem to be running a local web server; there may be other configurations). Depending on your working files layout, URLs like this should be mapped either as {{{http://server:8080/misc/** => <your misc folder>/**}}} or as {{{http://server:8080/** => <your project folder>/**}}}
 
 You can configure this in “Source” tab of your debug launch configuration.
 
-Picture
+http://chromedevtools.googlecode.com/svn/wiki/rel016-debug-configurations-source.png
 
 Add a new source container with identifier mapping and make sure it is above “Default” container (here “Default” container represents the virtual project that holds downloaded scripts). In the dialog window, choose “!JavaScript Source Name Mapper” from the list. This container converts URL (or any id) into a file name and looks it up in another container, here called “target container”.
 
-Picture
- 
-Depending on your configuration, enter the common URL prefix (e.g. “http://server:8080/”) and specify the target container (choose type and configure it). Note that you may need to restart your debug launch after this.
+http://chromedevtools.googlecode.com/svn/wiki/rel016-source-name-mapper.png
+
+Depending on your configuration, enter the common URL prefix (e.g. {{{http://server:8080/}}}) and specify the target container (choose type and configure it). Note that you may need to restart your debug launch after this.
 
 ==Multiple Debug Sessions Case==
 Eclipse allows simultaneous debug launches. E.g. in your browser, you may open the web page in 2 tabs and start debugging both tabs. This comprises an interesting scenario if you have configured sources for working files. A single working file may be associated with the script in several VMs at the same time. E.g. when you set a breakpoint in your file, both VMs react. In some cases UI has to explicitly support the multiple debug launches case.
@@ -32,13 +32,13 @@ Eclipse allows simultaneous debug launches. E.g. in your browser, you may open t
 ==Breakpoints in Workspace==
 Now you can set a breakpoint in your working files. Unlike files in virtual projects, the working files are persistent and so are their breakpoints. If you restart your V8 VM, Debugger will restore your breakpoints on connecting to it. Note that in an exotic case, the VM you are connecting to may have its own set of breakpoints if it has some history before this debug session. You may specify what should happen in this case in the launch configuration (under “Breakpoints sync of launch”):
 
-Picture
- 
-Additionally, you may synchronize the breakpoints at any time you want from the context menu of your launch (in “Debug” view): “Synchronize JavaScript Breakpoints”.
+http://chromedevtools.googlecode.com/svn/wiki/rel016-debug-configurations-remote.png
+
+Additionally, you may synchronize the breakpoints at any time you want from the context menu of your launch (in “Debug” view): “Synchronize !JavaScript Breakpoints”.
 
 Another thing is that with a working file and its counterpart in the virtual project you have 2 copies/representations of your script. While you can set a breakpoint on any copy of the script file, Debugger will always prefer only one representation (according to settings in Source tab of the launch configuration) when it needs to highlight the current line of code. This means that debugger may stop on a breakpoint, but the breakpoint itself won’t be visible, because it was set in the other copy of the script file.
 
-This release comes with a significant limitation, which allows dealing with working file breakpoints only from system Text Editor. In particular it means that should you open the file in JSDT editor (“JavaScript Editor”), you won’t be able to operate with breakpoints (more precisely, JSDT has its own breakpoints, that are not supported yet). This problem should be fixed in future releases.
+This release comes with a significant limitation, which allows dealing with working file breakpoints only from system Text Editor. In particular it means that should you open the file in JSDT editor (“!JavaScript Editor”), you won’t be able to operate with breakpoints (more precisely, JSDT has its own breakpoints, that are not supported yet). This problem should be fixed in future releases.
 
 ==Variables View Features==
 There are just some minor changes here.
@@ -48,7 +48,7 @@ There are just some minor changes here.
 ==Live Edit==
 This is a highly experimental feature that allows you to edit your script while it is being executed by V8. After you have edited your script you may try to push the changes to VM and see whether it has succeeded. To do it, in editor context menu choose “V8 Debugging” -> “Push Source Changes to VM”. An additional menu item “Preview and Push Source Changes to VM…” gives you a more verbose UI that should help understand what is happening.
 
-Obviously, there are some limitations to this feature. First, the principal limitations: JavaScript features very few kinds of declarations which you could edit, e.g. you can’t edit a script and add a new field to a type because there is no place where fields are actually declared. Second, this feature is still under development so there are many things that may be not implemented yet.
+Obviously, there are some limitations to this feature. First, the principal limitations: !JavaScript features very few kinds of declarations which you could edit, e.g. you can’t edit a script and add a new field to a type because there is no place where fields are actually declared. Second, this feature is still under development so there are many things that may be not implemented yet.
 The best use of live edit is to change function algorithms by editing function body:
 
 Before:
