--- a/wiki/Release_0_1_6.wiki
+++ b/wiki/Release_0_1_6.wiki
@@ -1,7 +1,7 @@
 #summary Release 0.1.6 notes
 
 =Google Chrome Developer Tools. Release 0.1.6.=
-As usual this release contains 2 parts: independent Java library “SDK” that implements Chrome/V8 debug protocol client and Eclipse feature “Debugger” that allows debugging Chrome/V8 !JavaScript programs from inside Eclipse. Naturally, Debugger uses SDK. In this document we cover only the changes in Debugger. SDK changes should be self-explaining on source code level and are not mentioned here.
+As usual this release contains 2 parts: independent Java library [ChromeDevToolsSdk “SDK”] that implements Chrome/V8 debug protocol client and Eclipse feature [EclipseDebugger “Debugger”] that allows debugging Chrome/V8 !JavaScript programs from inside Eclipse. Naturally, Debugger uses SDK. In this document we cover only the changes in Debugger. SDK changes should be self-explaining on source code level and are not mentioned here.
 
 
 ==Overview==
